# PhantomGenesis

./: ActiveObject.cpp  ActiveObject.h  CMakeLists.txt  DropItem.cpp  DropItem.h  FlamePhantom.cpp  FlamePhantom.h  FlameWave.cpp  FlameWave.h  GameManager.cpp  GameManager.h  King.cpp  King.h  KingWave.cpp  KingWave.h  LurkPhantom.cpp  LurkPhantom.h  LurkWave.cpp  LurkWave.h  Map.cpp  Map.h  PhantomBase.cpp  PhantomBase.h  Player.cpp  Player.h  PlayerWave.cpp  PlayerWave.h  README.md  SPOILER.md  VisionMaskItem.cpp  VisionMaskItem.h  Wave.cpp  Wave.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
